--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "egg": "^2.2.1",
+    "egg-jwt": "^3.1.4",
     "egg-scripts": "^2.5.0",
     "egg-sequelize": "^4.1.0",
     "mysql2": "^1.6.4"
