--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "await-stream-ready": "^1.0.1",
     "egg": "^2.2.1",
     "egg-jwt": "^3.1.4",
     "egg-scripts": "^2.5.0",
     "egg-sequelize": "^4.1.0",
-    "mysql2": "^1.6.4"
+    "mysql2": "^1.6.4",
+    "stream-wormhole": "^1.1.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
