--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "await-stream-ready": "^1.0.1",
+    "cheerio": "^1.0.0-rc.2",
     "egg": "^2.2.1",
     "egg-jwt": "^3.1.4",
     "egg-scripts": "^2.5.0",
