--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "egg-jwt": "^3.1.4",
     "egg-scripts": "^2.5.0",
     "egg-sequelize": "^4.1.0",
+    "egg-socket.io": "^4.1.5",
     "mysql2": "^1.6.4",
     "stream-wormhole": "^1.1.0"
   },
@@ -28,9 +29,9 @@
     "node": ">=8.9.0"
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-server-bike-system",
+    "start": "egg-scripts start --daemon --sticky --title=egg-server-bike-system",
     "stop": "egg-scripts stop --title=egg-server-bike-system",
-    "dev": "egg-bin dev",
+    "dev": "egg-bin dev --sticky",
     "debug": "egg-bin debug",
     "test": "npm run lint -- --fix && npm run test-local",
     "test-local": "egg-bin test",
